--- a/00009_¿Cuánto falta?/expectations.yml
+++ b/00009_¿Cuánto falta?/expectations.yml
@@ -1,6 +1,6 @@
 ---
 expectations:
 - binding: cuantoFaltaHasta
-  inspection: HasVariable
+  inspection: HasBinding
 - binding: cuantoFaltaHasta
   inspection: HasWhile
