replacing HasVariable for HasBinding

--- a/00005_El clásico de Avellaneda/expectations.yml
+++ b/00005_El clásico de Avellaneda/expectations.yml
@@ -1,7 +1,7 @@
 ---
 expectations:
 - binding: quienGano
-  inspection: HasVariable
+  inspection: HasBinding
 - binding: quienGano
   inspection: HasUsage:golesRacing
 - binding: quienGano
