--- a/00008_Recuerdos que no voy a olvidar/expectations.yml
+++ b/00008_Recuerdos que no voy a olvidar/expectations.yml
@@ -1,7 +1,7 @@
 ---
 expectations:
 - binding: maximaCantidadDeBolitas
-  inspection: HasVariable
+  inspection: HasBinding
 - binding: maximaCantidadDeBolitas
   inspection: HasUsage:maximo
 - binding: maximaCantidadDeBolitas
