--- a/00012_Representando números/expectations.yml
+++ b/00012_Representando números/expectations.yml
@@ -1,6 +1,6 @@
 ---
 expectations:
 - binding: numero
-  inspection: HasVariable
+  inspection: HasBinding
 - binding: numero
   inspection: HasUsage:cifra
